Fix overflows/overlaps in PrintArea

--- a/src/print1.css
+++ b/src/print1.css
@@ -14,10 +14,9 @@
   #print-area > div.print-page {
     position: relative;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    grid-template-rows: repeat(3, minmax(0, 1fr));
     gap: 16px;
-    width: 100%;
     height: 100%;
     break-after: page;
   }
@@ -29,6 +28,7 @@
 
   div.print-page > figure > figcaption {
     display: block;
+    flex-basis: min-content;
     /* min-height: 72px; */
     width: 100%;
     background-color: rgb(0, 0, 0);
@@ -39,7 +39,8 @@
   }
 
   div.print-page > figure > img {
-    height: 100%;
+    flex-grow: 1;
+    min-height: 0;
   }
 
   @page {
